@@ -1,3 +1,8 @@
+2007-05-25  Jens Granseuer  <jensgr@gmx.net>
+
+	* eggaccelerators.c: (egg_accelerator_parse_virtual): sync with libegg
+	code (closes bug #441042)
+
 2007-05-17  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Chad Miller
